// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Listing Default listing item in 2 columns renders correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--default-2-col"
  >
    <h2
      class="mb-4 bcl-heading"
    >
      Listing item block title
    </h2>
    <div
      class="row row-cols-1 row-cols-md-2 g-4"
    >
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing Default listing item in 3 columns renders correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--default-3-col"
  >
    <h2
      class="mb-4 bcl-heading"
    >
      Listing item block title
    </h2>
    <div
      class="row row-cols-1 row-cols-xl-3 g-4"
    >
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing alignment classes render correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--default-1-col"
  >
    <h2
      class="mb-4 bcl-heading"
    >
      Listing item block title
    </h2>
    <div
      class="row row-cols-1 g-4"
    >
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing horizontal renders correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--default-1-col"
  >
    <h2
      class="mb-4 bcl-heading"
    >
      Listing item block title
    </h2>
    <div
      class="row row-cols-1 g-4"
    >
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing horizontal renders correctly with title and link 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--default-1-col"
  >
    <h6
      class="mb-4 bcl-heading"
    />
    <div
      class="row row-cols-1 g-4"
    >
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing renders correctly in 2 columns with highlight and with title 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--highlight-2-col"
  >
    <h6
      class="mb-4 bcl-heading"
    >
      Listing test title
    </h6>
    <div
      class="row row-cols-1 row-cols-md-2 g-4"
    >
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing renders correctly in 2 columns with title 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--default-2-col"
  >
    <h6
      class="mb-4 bcl-heading"
    >
      Listing test title
    </h6>
    <div
      class="row row-cols-1 row-cols-md-2 g-4"
    >
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing renders correctly in 3 columns with highlight and with title 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--highlight-3-col"
  >
    <h6
      class="mb-4 bcl-heading"
    >
      Listing test title
    </h6>
    <div
      class="row row-cols-1 row-cols-md-3 g-4"
    >
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing renders correctly in 3 columns with title 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--default-3-col"
  >
    <h6
      class="mb-4 bcl-heading"
    >
      Listing test title
    </h6>
    <div
      class="row row-cols-1 row-cols-xl-3 g-4"
    >
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing renders correctly with date and with title 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--default-2-col"
  >
    <h6
      class="mb-4 bcl-heading"
    >
      Listing test title
    </h6>
    <div
      class="row row-cols-1 row-cols-md-2 g-4"
    >
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing renders correctly with highlight and with title 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--highlight-1-col"
  >
    <h6
      class="mb-4 bcl-heading"
    >
      Listing test title
    </h6>
    <div
      class="row row-cols-1 g-4"
    >
      <div
        class="col mt-4-5"
      />
      <div
        class="col mt-4-5"
      />
      <div
        class="col mt-4-5"
      />
      <div
        class="col mt-4-5"
      />
      <div
        class="col mt-4-5"
      />
      <div
        class="col mt-4-5"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing with date listing items renders correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--default-2-col"
  >
    <h2
      class="mb-4 bcl-heading"
    >
      Listing item block title
    </h2>
    <div
      class="row row-cols-1 row-cols-md-2 g-4"
    >
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing with highlight listing item in 2 columns renders correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--highlight-2-col"
  >
    <h2
      class="mb-4 bcl-heading"
    >
      Listing item block title
    </h2>
    <div
      class="row row-cols-1 row-cols-md-2 g-4"
    >
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing with highlight listing item in 3 columns renders correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--highlight-3-col"
  >
    <h2
      class="mb-4 bcl-heading"
    >
      Listing item block title
    </h2>
    <div
      class="row row-cols-1 row-cols-md-3 g-4"
    >
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
      <div
        class="col"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;

exports[`OE - Listing with highlight listing item renders correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--highlight-1-col"
  >
    <h2
      class="mb-4 bcl-heading"
    >
      Listing item block title
    </h2>
    <div
      class="row row-cols-1 g-4"
    >
      <div
        class="col mt-4-5"
      />
      <div
        class="col mt-4-5"
      />
      <div
        class="col mt-4-5"
      />
      <div
        class="col mt-4-5"
      />
      <div
        class="col mt-4-5"
      />
      <div
        class="col mt-4-5"
      />
    </div>
    <a
      example.html=""
    >
      Listing item block CTA
    </a>
  </div>
</jest>
`;
